tests/error/functionUndefined.tpc
int main(void){
	int a;
	a = 6;
	return multiply(a);
}